# codex-handoff

./: .env.local.example  .gitignore  .npmignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.codex-handoff/: handoff.json  latest.md
.codex-handoff/raw/: session-2026-04-06.jsonl
codex_handoff/: __init__.py  __main__.py  agent.py  autostart.py  cli.py  codex_projects.py  config.py  git_config.py  local_codex.py  r2.py  reader.py  remote_auth.py  secrets.py  skills.py  subprocess_utils.py  summarize.py  sync.py  test_thread.py  workspace.py
docs/: README.md  agent-install-prompts.md  agent-install-ux.md  command-reference.md  npm-installer-spec.md  operations-guide.md  thread-sync-design.md
npm/: cli.js  cli.test.js  postinstall.js
npm/lib/: agent-runtime.js  autostart.js  child-process.js  child-process.test.js  file-ops.js  local-codex.js  memory.js  memory.test.js  notify.js  process-utils.js  process-utils.test.js  reader.js  reader.test.js  remote-auth.js  repo-auth.js  repo-auth.test.js  runtime-config.js  runtime-config.test.js  sync.js  sync.test.js  thread-bundles.js  watch-runtime.js  workspace.js  workspace.test.js
npm/service/: agent_controller.js  agent_controller.test.js  agent_service.js  agent_service.test.js  (+9 more)
schemas/: handoff.schema.json
tests/: test_agent.py  test_autostart.py  test_cli.py  test_config.py  test_enable.py  test_install_doctor.py  test_postinstall.py  test_receive.py  test_remote_auth.py  test_skill.py  test_subprocess_utils.py  test_summarize.py  test_sync.py  test_test_thread.py
(+1 files in other folders)
