[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-handoff"
version = "0.1.0"
description = "Bootstrap and restore Codex working context from local memory files."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "BRDG KR" }
]
scripts = { codex-handoff = "codex_handoff.cli:main" }

[tool.setuptools.packages.find]
include = ["codex_handoff*"]
